--- a/appointment/templates/appointment/my_trial.html
+++ b/appointment/templates/appointment/my_trial.html
@@ -137,7 +137,8 @@
     <header class="clearfix">
         <div id="logo"style = "display:flex; justify-content:left; align-items:left;">
      
-            <img src="static/images/kevjos.png" width='250px'>
+           <!-- <img src="static/images/kevjos.png" width='250px'>-->
+           <div>Surgery Management System </div>
             <hr>
             
             <br>
@@ -152,7 +153,6 @@
                 <tr>
                   
                     <th>NAME</th>
-                    <th>AGE</th>
                     <th>NATIONAL ID</th>
                     <th>ADDRESS</th>
                     <th>PHONE NUMBER</th>
@@ -169,8 +169,9 @@
                     <td>{{obj.NatID}}</td> {% endcomment %}
  
             <td>{{prescription_value.patient}}</td>
-            <td>{{prescription_value.age}}</td>
+       
             <td>{{prescription_value.NatID}}</td>
+           
 
             </tbody>
         </tr>
@@ -209,7 +210,7 @@
             <td>{{prescription_value.frequency}}</td>
             <td>{{prescription_value.duration}}</td> 
             <td>{{prescription_value.diagnosis}}</td>
-            <td>{{prescription_value.diagnosis}}</td>
+            <td>{{prescription_value.comment}}</td>
             </tbody>
          
          
