--- a/appointment/templates/appointment/prescription_create.html
+++ b/appointment/templates/appointment/prescription_create.html
@@ -1,28 +1,23 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
-
-
 {% block content %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet"
-          href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <title>Autocomplete</title>
-</head>
-<div class="container">
-    <h3>Hello, {{ user.username }}</h3>
-   
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet"
+              href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+        <title>Autocomplete</title>
+    </head>
+    <div class="container">
+        <h3>Hello, {{ user.username }}</h3>
         {% comment %} <label for="icd10">Check the ICD10 for Diagnosis</label>  {% endcomment %}
         {% comment %} <input type="text" name="icd10" id="icd10"> {% endcomment %}
-        
-            
-    <form method="POST">
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script>
+        <form method="POST">
+            <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+            <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+            <script>
         {% comment %} $(function () {
         $("#id_diagnosis").autocomplete({
             
@@ -42,13 +37,52 @@
               
             });
         });
-        
-        </script>
-        {% csrf_token %}
-        {% bootstrap_form form %}
-  
-        <input type="submit" value="Create" class="btn btn-info">
-    </form>
-</div>
 
- {% endblock %}
+        $(function(){
+            $('#id_patient').click (function(){
+                $(function () {
+                    $("#id_patient").autocomplete({
+                        
+                        source: '{% url 'appointment:patient-name' %}'
+                      
+                    });
+                    });
+              
+            });
+        });
+
+        $(function(){
+            $('#id_patient').on('change', function(e){
+                $('#id_NatID, label[for="id_NatID]').show();  
+                let rate;
+
+                $.ajax({url: "http://127.0.0.1:8000/api/user-profile/", async:true, success: function(result){
+                   
+                    rate = result[1].NatID
+                    console.log(rate)
+                    $("#id_NatID").val(rate)
+    
+               
+                 
+    
+                },
+            });
+              
+                
+    
+              });
+    
+
+ 
+          
+            });
+
+
+        
+            </script>
+            {% csrf_token %}
+            {% bootstrap_form form %}
+            <input type="submit" value="Create" class="btn btn-info">
+        </form>
+    </div>
+{% endblock %}
