--- a/user_profile/templates/user_profile/profile_create.html
+++ b/user_profile/templates/user_profile/profile_create.html
@@ -1,4 +1,120 @@
-{% extends "base.html" %}
+{% load static %}
+{% load widget_tweaks %}
+<!DOCTYPE html>
+<html>
+    <head>
+        
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport"
+              content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet"
+              href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+              integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+              crossorigin="anonymous">
+        <title>Profile</title>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+        </script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+        </script>
+    </head>
+    <script src="https://cdn.rawgit.com/xcash/bootstrap-autocomplete/3de7ad37/dist/latest/bootstrap-autocomplete.js"></script>
+    {% block script %}
+        <script src="https://cdn.rawgit.com/xcash/bootstrap-autocomplete/3de7ad37/dist/latest/bootstrap-autocomplete.js"></script>
+    {% endblock %}
+    <script>
+        $(function(){
+            $('#id_medicalAid_0').on('click', function(e){
+                $('#id_medAidName, label[for="id_medAidName]').show();        
+                $('#id_membership, label[for="id_membership"]').show();
+                $('#id_beneficiary, label[for="id_beneficiary"]').show();
+                $('#id_next_of_kin_name, label[for="id_next_of_kin_name"]').show();
+                $('#id_next_of_kin_number, label[for="id_next_of_kin_number"]').show();
+                
+    
+              });
+    
+
+ 
+          
+            });
+
+        $(function(){
+                $('#id_medicalAid_1').on('click', function(e){
+                    $('#id_medAidName, label[for="id_medAidName]').hide();      
+                    $('#id_membership, label[for="id_membership"]').hide();
+                    $('#id_beneficiary, label[for="id_beneficiary"]').hide();
+                    $('#id_next_of_kin_name, label[for="id_next_of_kin_name"]').show();
+                    $('#id_next_of_kin_number, label[for="id_next_of_kin_number"]').show();
+                    
+        
+                  });
+        
+    
+     
+              
+                });
+       
+
+    </script>
+    <body id="top">
+        <div class="jumbotron">
+            <h1 class="display-4">Profile</h1>
+            <p class="lead">
+                Create Profile...
+            </p>
+        </p>
+    </div>
+    {% block content %}
+        <div class="container">
+            <div class="form-group">
+              
+                  
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ user_form.as_p }}
+                    
+                    <a href="{% url 'appointment:patient_list' %}"> <input type="submit" value="Create" class="btn btn-info"></a>
+ 
+                </form>
+
+            </div>
+
+        </div>
+    {% endblock %}
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+          crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Use -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- Instead of -->
+<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{% comment %} {% extends "base.html" %}
 {% load bootstrap3 %}
 
 
@@ -10,4 +126,4 @@
         <input type="submit" value="Create" class="btn btn-default">
     </form>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
