addeddjango cron job

--- a/account/templates/account/contact.html
+++ b/account/templates/account/contact.html
@@ -4,17 +4,16 @@
 
 {% block content %}
 <div class="jumbotron">
-    <h3>Contact Surgery</h3>
+    <h3>Contact Details</h3>
     <br>
     <p>
-        Address - Suite 7, <br>
-                   David's Mansion,1st Floor <br>
-                  Between 9th & 10th Av,R.G Mugabe Way,<br>
+          Name: Damian Tendai Mudzengerere <br>
+          Address:    No.6 Fitch Khumalo,<br>
                   Bulawayo, <br>
-        Landline - +292270328<br>
+      
                  
-        Phone -  0779145759<br>
-        Email - damecode.dev@gmail.com<br>
+        Phone : 0779145759<br>
+        Email : n0174726f@students.nust.ac.zw<br>
     </p>
 </div>
 {% endblock %}
