--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 
 {% block content %}
-  <h2 class="jumbotron" align="center">DameCode Management System</h2>
+  <h2 class="jumbotron" align="center">Surgery Management System</h2>
     <br> 
 <style>
     * {box-sizing: border-box;}
