--- a/appointment/templates/appointment/appointment_list.html
+++ b/appointment/templates/appointment/appointment_list.html
@@ -14,7 +14,7 @@
                 <th>Consulting Doctor</th>
                 <th>Status</th>
             </thead>
-            {% for obj in object_list %}
+            {% for obj in object_list %}z
             <tr id="row-1">
 
                 <td>{{ obj.date }}</td>
