--- a/appointment/templates/appointment/payment_list.html
+++ b/appointment/templates/appointment/payment_list.html
@@ -35,6 +35,8 @@
                     <th>paymentMethod</th>
                     <th>MedAid Name</th>
                     <th>EcoNumber</th>
+                    <th>Short Fall</th>
+                    <th>ShortFall Payment</th>
                     <th>Total</th>
                     <th>Status</th>
                 </thead>                
@@ -45,6 +47,8 @@
                     <td>{{ obj.paymentMethod }}</td>
                     <td>{{ obj.medaid }}</td>
                     <td>{{ obj.ecoNumber }}</td>
+                    <td>{{ obj.shortfall }}</td>
+                    <td>{{ obj.add_payment }}</td>
                     <td>{{ obj.total }}</td>
                      <td>{{ obj.status }}</td>
                 </tr>
