--- a/appointment/templates/appointment/receptionist_app.html
+++ b/appointment/templates/appointment/receptionist_app.html
@@ -50,6 +50,7 @@
                 <th>Temp</th>
                 <th>Weight</th>
                 <th>SP02</th>
+                <th>Appointment Status</th>
                 <th>Notification Status(SMS)</th>
                
               <!-- <th>Complaint</th>-->
@@ -72,6 +73,7 @@
                   
                 <td>{{obj.Weight}}</td>
                 <td >{{obj.SP02}}</td>
+                <td >{{obj.appointment_status}}</td>
                 <td >{{obj.notification}}</td>
                 </tr>
                 {% endfor %}
