--- a/templates/base.html
+++ b/templates/base.html
@@ -103,6 +103,9 @@
                                 <a href="{% url 'paymentMethod:payment_method' %}"class="btn btn-simple">Rates</a>
                             </li>
                             <li>
+                                <a href="{% url 'medaid:medaid_names' %}"class="btn btn-simple">Medical Aid</a>
+                            </li>
+                            <li>
                                 <a href="{% url 'user_profile:patient_list' %}"class="btn btn-simple">Patients</a>
                             </li>
                             <li>
