--- a/account/templates/account/aboutus.html
+++ b/account/templates/account/aboutus.html
@@ -9,7 +9,7 @@
 </style>
 <h4 align="right" class="c">"We care to cure you."</h4>
 
-    <h4 align="left" class="c"> About Us Page...</h4>
+    <h4 align="left" class="c"> About Us...</h4>
 </div>
 
 {% endblock %}
